Update gemfile and views

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,8 @@
 <h1>Secret Santa!!!!!</h1>
-<p>This is a super cool app that you should all use</p>
+<nav>
+  <ul>
+    <li><%= link_to "Create Group",   '#' %></li>
+    <li><%= link_to "Log in to Existing Group",   '#' %></li>
+    <li><%= link_to "About Secret Santa", '#' %></li>
+  </ul>
+</nav>
