Update static pages and routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,1 @@
-<h1>Secret Santa!!!!!</h1>
-<nav>
-  <ul>
-    <li><%= link_to "Create Group",   '#' %></li>
-    <li><%= link_to "Log in to Existing Group",   '#' %></li>
-    <li><%= link_to "About Secret Santa", '#' %></li>
-  </ul>
-</nav>
+<%= render 'layouts/header'%>
