--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,3 @@
+<%= render 'layouts/header'%>
 <h1>About</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<p>We are college students representing UCLA and Northwestern</p>
