--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,3 +1,4 @@
+<%= render 'layouts/header'%>
 <h1>Edit Group</h1>
 
 <div class="row">
@@ -16,8 +17,8 @@
 
       <%= f.submit "Save changes", class: "btn btn-primary" %>
     <% end %>
-    <%= link_to "delete", group, method: :delete,
+    <%= link_to "delete", @group, method: :delete,
                                   data: { confirm: "Are you sure you want to delete your group? :(" } %>
-  <% end %>
+  
   </div>
 </div>
