--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,3 +36,43 @@ input {
   }
 }
 
+/* users */
+
+.user {
+  list-style: none;
+  padding: 0;
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+  .group {
+    margin-top: 5em;
+    padding-top: 0;
+  }
+  .email {
+    display: block;
+    margin-left: 60px;
+  }
+}
+
+aside {
+  textarea {
+    height: 100px;
+    margin-bottom: 5px;
+  }
+}
+
+#button {
+    a {
+      color: green;
+          display: block;
+    text-align: center;
+    padding: 10px 15px;
+    }
+      text-align: center;
+  border: 1px solid green;
+  border-radius: 5px;
+  background-color: white;
+    margin: 20px 5px 0;
+    display: inline-block;
+}
