--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,9 +5,59 @@
 
 
 
+h1 {
+  text-align: center;
+  font-weight: bold;
+  padding: 20px;
+  color: green;
+}
 
+ul > li{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    width: 20%;
+    float: right;
+    text-align: center;
+    padding: 4px;
+    font-weight: bold;
+    color: white ;
+    background-color: #98bf21;
+}
 
+li {
+    float: right;
+}
 
+a:link, a:visited {
+    display: inline-block;
+    font-weight: bold;
+    color: #FFFFFF;
+    background-color: rgba(25, 200, 0, .8);
+    border: 1px solid green ;
+    text-align: center;
+    padding: 8px;
+    text-decoration: none;
+    text-transform: none;
+    font-size: 180%;
+}
+
+a:hover, a:active {
+    background-color: #7A991A;
+}
+
+body {
+  
+  background-image: url("https://d3ui957tjb5bqd.cloudfront.net/images/screenshots/products/20/205/205088/santa-f.jpg?1412975969");
+
+}
+
+.boxed {
+  border: 1px solid green ;
+  background-color: rgba(25, 200, 0, 0.8);
+  padding: 10px;
+}
 
 /* forms */
 
@@ -35,4 +85,3 @@ input {
     color: $state-danger-text;
   }
 }
-
