--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,20 @@
-<%= link_to "Secret Santa", root_path, id: "logo" %>
-<nav>
-  <ul class="nav nav-bar nav-right">
-
-    <% if logged_in? %>
-        <li><%= link_to "My Group", current_group %></li>
-        <li><%= link_to "Group Settings", edit_group_path(current_group)%></li>
-        <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+<div class="container">
+  <nav>
+    <div class="nav nav-bar nav-right row">
+      <% if logged_in? %>
+          <div class="col-md-3"> <%= link_to "Secret Santa", root_path, id: "logo" %></div>
+          <div class="col-md-3"><%= link_to "My Group", current_group %></div>
+          <div class="col-md-3"><%= link_to "Group Settings", edit_group_path(current_group)%></div>
+          <div class="col-md-3"><%= link_to "Log out", logout_path, method: "delete" %></div>
       <% else %>
-        <li><%= link_to "Create Group",   create_group_path %></li>
-		    <li><%= link_to "I Have a Group",  login_path  %></li>
-		    <li><%= link_to "About Secret Santa", about_path %></li>
-      <% end %>
-  </ul>
-</nav>
+          <div class="col-md-3"> <%= link_to "Secret Santa", root_path, id: "logo" %></div>
+          <div class="col-md-3"><%= link_to "Create Group",   create_group_path %></div>
+          <div class="col-md-3"><%= link_to "I Have a Group",  login_path  %></div>
+          <div class="col-md-3"><%= link_to "About Secret Santa", about_path %></div>
+        <% end %>
+    </div>
+  </nav>
+</div>
+
+
+
