Changed content of home and about

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,7 +4,7 @@
 <br>
 <br>
 <body>
-<img src="http://pngimg.com/upload/christmas_PNG3769.png" />
+<img src="http://pngimg.com/upload/christmas_PNG3769.png" align="middle"/>
 <table>
 <th colspan="4">The People</th>
 <tr>
@@ -14,10 +14,10 @@
 	<td>Julia Wilkins</td>
 </tr>
 <tr>
-	<td><img src=https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/UCLA_athletics_text_logo.svg/1280px-UCLA_athletics_text_logo.svg.png/></td>
-	<td><img src="http://vignette2.wikia.nocookie.net/logopedia/images/c/c8/500px-Northwestern_University_Wordmark_svg.png/revision/latest?cb=20130523234711" /></td>
-	<td><img src="http://vignette2.wikia.nocookie.net/logopedia/images/c/c8/500px-Northwestern_University_Wordmark_svg.png/revision/latest?cb=20130523234711" /></td>
-	<td><img src="http://vignette2.wikia.nocookie.net/logopedia/images/c/c8/500px-Northwestern_University_Wordmark_svg.png/revision/latest?cb=20130523234711" /></td>
+	<td> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/UCLA_athletics_text_logo.svg/1280px-UCLA_athletics_text_logo.svg.png/" /> </td>
+	<td> <img src="http://vignette2.wikia.nocookie.net/logopedia/images/c/c8/500px-Northwestern_University_Wordmark_svg.png/revision/latest?cb=20130523234711" /></td>
+	<td> <img src="http://vignette2.wikia.nocookie.net/logopedia/images/c/c8/500px-Northwestern_University_Wordmark_svg.png/revision/latest?cb=20130523234711" /></td>
+	<td> <img src="http://vignette2.wikia.nocookie.net/logopedia/images/c/c8/500px-Northwestern_University_Wordmark_svg.png/revision/latest?cb=20130523234711" /></td>
 </tr>
 </table>
 
