--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,5 @@
 <%= render 'layouts/header'%>
 <h1>About</h1>
+<div class="boxed">
 <p>We are college students representing UCLA and Northwestern</p>
+</div>
