--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -3,6 +3,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
+    <div class="boxed">
     <%= form_for(@group) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
@@ -17,8 +18,9 @@
 
       <%= f.submit "Save changes", class: "btn btn-primary" %>
     <% end %>
-    <%= link_to "delete", @group, method: :delete,
+    <%= link_to "Delete group?", @group, method: :delete,
                                   data: { confirm: "Are you sure you want to delete your group? :(" } %>
+    </div>
   
   </div>
 </div>
