--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,11 +1,15 @@
 <%= render 'layouts/header'%>
+
 <h1><%= @group.name %></h1>
-<span id="button"><%= link_to "Add Member", new_user_path %></span>
-  <div class="col-md-8">
-    <% if @group.users.any? %>
-      <h3>Group members (<%= @group.users.count %>)</h3>
-      <ol class="users">
-        <%= render @users %>
-      </ol>
-    <% end %>
-  </div>
+
+<div><center><%= link_to "Add Member", new_user_path %></center></div>
+	
+  		
+  			
+	    <% if @group.users.any? %>
+	      <center><h3>Group members (<%= @group.users.count %>)</h3></center>
+	      <ol class="users">
+	        <%= render @users %>
+	      </ol>
+	    <% end %>
+	
