--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,7 @@
-<li id="User-<%= user.id %>">
+<li class="userfield" id="User-<%= user.id %>">
   <span class="user"><%= user.name %></span>
   <span class="email"><%= user.email %></span>
-  <span> <%= link_to "delete", user, method: :delete,
-                                       data: { confirm: "Remove group member?" } %> </span>
+  <span class = "remove_user"> <%= link_to "remove group member", user, method: :destroy,
+                                       data: { confirm: "Remove group member?" },
+                                       class: "remove_user" %> </span>
 </li>
