--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,11 @@
 <%= render 'layouts/header'%>
   <h1>Add Group Member</h1>
   <div class="row">
-    <aside class="col-md-4">
-      <section class="user_form">
-        <%= render 'shared/user_form' %>
-      </section>
-    </aside>
+	    <aside class="col-md-4">
+	    	<div class="boxed">
+	      <section class="user_form">
+	        <%= render 'shared/user_form' %>
+	      </section>
+	  </div>
+	    </aside>
   </div>
