--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -153,3 +153,11 @@ span.remove_user a {
   margin-right: 400px;
   font-size: 130%;
 }
+
+.ucla {
+  width: 50px;
+}
+
+.tree {
+  width: 300px;
+}
