--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -6,8 +6,7 @@
 <p>Thank you for checking out Secret Santa! This web application was created by Cristen Anderson, Morgan Walker, Alexander Fang, and Julia Wilkins (representing UCLA and Northwestern) during Northwestern University's Wildhacks 2015 using Ruby on Rails and HTML/CSS. </p>
 <br>
 <br>
-
-<img src="http://pngimg.com/upload/christmas_PNG3769.png" align="middle"/>
+<img class="tree" src="http://cliparts.co/cliparts/ATb/jGo/ATbjGoBac.png" align="middle"/>
 <table>
 <th colspan="4">The People</th>
 <tr>
@@ -17,7 +16,7 @@
 	<td>Julia Wilkins</td>
 </tr>
 <tr>
-	<td> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/UCLA_athletics_text_logo.svg/1280px-UCLA_athletics_text_logo.svg.png/" /> </td>
+	<td> <img src="http://www.sports-logos-screensavers.com/user/UCLA_Bruins.jpg" class="ucla"/> </td>
 	<td> <img src="http://vignette2.wikia.nocookie.net/logopedia/images/c/c8/500px-Northwestern_University_Wordmark_svg.png/revision/latest?cb=20130523234711" /></td>
 	<td> <img src="http://vignette2.wikia.nocookie.net/logopedia/images/c/c8/500px-Northwestern_University_Wordmark_svg.png/revision/latest?cb=20130523234711" /></td>
 	<td> <img src="http://vignette2.wikia.nocookie.net/logopedia/images/c/c8/500px-Northwestern_University_Wordmark_svg.png/revision/latest?cb=20130523234711" /></td>
